--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,28 +18,23 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  /* justify-content: center; */
-
-  /* min-height: 100vh; */
+  justify-content: center;
   padding: 10%;
   padding-top: 5%;
 }
 
 .container {
   display: flex;
-
-  /* flex-direction: column; */
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
   max-width: 1100px;
-
-  /* padding: 5%; */
 }
 
 .title {
   align-self: flex-start;
-  font-size: 60px;
+  font-size: 50px;
   margin-left: 5%;
   margin-bottom: 5%;
   width: 100%;
@@ -66,7 +61,7 @@ button {
 .score-form {
   display: flex;
   flex-direction: column;
-  width: 450px;
+  width: 100%;
 }
 
 .form-input {
@@ -87,7 +82,7 @@ button {
 }
 
 .scores-board {
-  width: 550px;
+  width: 100%;
 }
 
 .score-board-top {
